--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 body {
   font-size: 100%;
-  font-family: Montserrat, "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 p {
@@ -16,18 +16,40 @@ img {
 
 /***************** NAV *****************/
 
-nav a:hover {
-  text-decoration: underline;
+nav ul {
+  background-color: #3D7FCF;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+nav ul li {
+  display: inline-block;
+  text-align: center;
+}
+
+nav a {
+  text-decoration: none;
+  display: block;
+  padding: 1em;
+  color: #FFFFFF;
+}
+
+li a:hover {
+    background-color: #6495ED;
+    color: inherit;
+    text-decoration: none;
 }
 
 /**************** HERO *****************/
 
-header img {
-  max-height: 6rem;
-}
-
 h1 .logo-w {
   font-size: 3.5rem;
+}
+
+header img {
+  max-height: 8rem;
+  float: left;
+  margin-left: auto;
 }
 
 /**************** ASIDE ****************/
@@ -41,7 +63,45 @@ input[type="submit"] {
   color: white;
 }
 
+aside {
+  float: right;
+  margin-top: 1em;
+  margin-right: 1em
+}
+
 /*********** PRODUCTS SECTION ***********/
+
+.item-container {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
+  font-size: 96%;
+  flex-wrap: wrap;
+  margin: 1rem;
+}
+
+.item {
+  flex-direction: row;
+  padding: 0.5em;
+  line-height: inherit;
+  border: 1px solid #EEEEEE;
+  border-radius: 1%;
+  margin: inherit;
+  width: auto;
+}
+
+.item-container img {
+  max-width: 15em;
+}
+
+.item-container p {
+  width: 16em;
+}
+
+.price {
+  font-family: cursive;
+  font-weight: bold;
+}
 
 section {
   padding: 0 .75rem;
@@ -52,10 +112,19 @@ h2 {
   font-size: 2rem;
   text-align: center;
   color: #2d2d2d;
+  margin-bottom: 1em;
 }
 
 h3 {
   font-size: 1.2rem;
   text-align: center;
   color: #2d2d2d;
+}
+
+footer {
+  background-color: #3D7FCF;
+  padding: 1em;
+  text-align: center;
+  color: #FFFFFF;
+  font-weight: bold;
 }
