corrected some laying out

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@ body {
 }
 
 p {
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-weight: lighter;
   color: #2d2d2d;
 }
@@ -18,7 +18,18 @@ img {
 }
 
 @media (max-width: 550px) {
-  h1 { font-size: 1.5rem; }
+  h1 {
+    font-size: 1rem;
+    color: #123;
+  }
+  input[type="submit"] {
+    margin-right: 10em;
+    margin-bottom: 2em;
+    padding-right: 1em;
+  }
+  input label {
+    float: left;
+  }
 }
 
 /***************** NAV *****************/
@@ -31,30 +42,31 @@ img {
     display: block;
     width: 100%;
     text-align: center;
-    border-bottom: .05em solid #129;
+    border-bottom: .05em solid #eee;
   }
 }
 
 nav ul {
+  display: flex;
+  flex-direction: row;
   background-color: #123;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
 nav ul li {
-  display: inline-block;
   text-align: center;
 }
 
 nav a {
   text-decoration: none;
   display: block;
-  padding: 1em;
+  padding: 1.2em;
   color: #FFFFFF;
 }
 
 li a:hover {
-    background-color: #6495ED;
+    background-color: #ffffff;
     color: inherit;
     text-decoration: none;
 }
@@ -66,8 +78,7 @@ h1 .logo-w {
 }
 
 header img {
-  max-height: 8rem;
-  float: left;
+  max-height: 4.7rem;
   margin-left: auto;
 }
 
@@ -120,6 +131,11 @@ aside {
 .price {
   font-family: cursive;
   font-weight: bold;
+}
+
+button {
+  float: right;
+  width: 25%;
 }
 
 section {
