--- a/styles/main.css
+++ b/styles/main.css
@@ -71,6 +71,11 @@ li a:hover {
     text-decoration: none;
 }
 
+.cart-info {
+  margin-left: 90%;
+  margin-bottom: 20px;
+}
+
 /**************** HERO *****************/
 
 h1 .logo-w {
