--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 body {
   font-size: 100%;
   font-family: Helvetica, Arial, sans-serif;
-  background-image: url(../images/flr.jpg);
+  background-image: url(../images/blurred.jpg);
   background-color: #eee;
 }
 
