--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,7 @@ body {
   font-size: 100%;
   font-family: Helvetica, Arial, sans-serif;
   background-image: url(../images/blurred.jpg);
+  background-size: cover;
   background-color: #eee;
 }
 
